--- a/README
+++ b/README
@@ -1,4 +1,67 @@
-RECIPES
-["core", "deployment", "devise", "email", "extras", "frontend", "gems", "git", "init", "learn_rails", "locale", "omniauth", "pages", "rails_bootstrap", "rails_devise", "rails_devise_pundit", "rails_foundation", "rails_mailinglist_signup", "rails_omniauth", "rails_signup_download", "railsapps", "readme", "roles", "setup", "tests"]
-PREFERENCES
-{:git=>true, :apps4=>"none", :announcements=>"none", :dev_webserver=>"thin", :prod_webserver=>"thin", :database=>"sqlite", :templates=>"slim", :tests=>"rspec", :continuous_testing=>"none", :frontend=>"bootstrap3", :email=>"smtp", :authentication=>"omniauth", :omniauth_provider=>"github", :authorization=>"none", :form_builder=>"simple_form", :pages=>"home"}
+Dialin
+========================
+
+This application was generated with the rails_apps_composer gem:
+https://github.com/RailsApps/rails_apps_composer
+provided by the RailsApps Project:
+http://railsapps.github.io/
+
+________________________
+
+Recipes:
+
+* core
+* deployment
+* devise
+* email
+* extras
+* frontend
+* gems
+* git
+* init
+* learn_rails
+* locale
+* omniauth
+* pages
+* rails_bootstrap
+* rails_devise
+* rails_devise_pundit
+* rails_foundation
+* rails_mailinglist_signup
+* rails_omniauth
+* rails_signup_download
+* railsapps
+* readme
+* roles
+* setup
+* tests
+
+Preferences:
+
+* git: true
+* apps4: none
+* announcements: none
+* dev_webserver: thin
+* prod_webserver: thin
+* database: sqlite
+* templates: slim
+* tests: rspec
+* continuous_testing: none
+* frontend: bootstrap3
+* email: smtp
+* authentication: omniauth
+* omniauth_provider: github
+* authorization: none
+* form_builder: simple_form
+* pages: home
+* locale: none
+* rvmrc: true
+* quiet_assets: true
+* local_env_file: foreman
+* better_errors: true
+* pry: true
+* deployment: capistrano3
+
+________________________
+
+License
